frontend/test/should_fail/array_removeIf_input_graph_element.grg
test array_removeIf(ref a:array<Node>) {
	n:Node;	
	if {
		a.removeIf{value:Edge -> nameof(value) != "$0"}.empty();
	}	
}
